bk_ida/gccida/g2/print_spelling
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_spelling/src/c-typeck.c:5059:19: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
for ( i = buffer; spelling_0 > v1; ++v1 ) 
                  ^~~~~~~~~~
                  spelling
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_spelling/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_spelling/src/c-typeck.c:5065:29: error: use of undeclared identifier 'stru_6F109F'
sprintf( i, ( const char *)&stru_6F109F._IO_save_end + 1, v7); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_spelling/src/c-typeck.c:5067:6: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
if ( spelling_0 <= v1 ) 
     ^~~~~~~~~~
     spelling
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_spelling/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_spelling/src/obj/c-typeck.o] Error 1
